цем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -20,11 +20,30 @@
             <li><a href="+380961111111"> +38 096 111 11 11</a></li>
           </ul>
         </nav>
-      </section>
-      <section>
-        <h2>эффективные решения для вашего бизнеса</h2>
-        <a href=""></a>
-      </section>
     </header>
+      </section>
+     <div>
+        <section>
+            <h2>эффективные решения для вашего бизнеса</h2>
+            <a href=""></a>
+        </section>
+     </div>
+    <section>
+        <h2>Мы гарантируем</h2>
+        <ul>
+            <li><img src="./img/antenna 1.svg" alt="антена"><span>Внимание к деталям</span> Идейные соображения, а также начало повседневной работы по формированию позиции.</li>
+            <li><img src="./img/clock 1.svg" alt="часы"><span>Пунктуальность</span> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</li>
+            <li><img src="./img/Vector.svg" alt="компютер"> <span>Планирование</span> Равным образом консультация с широким активом в значительной степени обуславливает.</li>
+            <li><img src="./img/astronaut 1.svg" alt="космонавт"><span>Современные технологии</span> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+            <li><img src="./img/nout.jpg" alt="ноутбук" width="380">Десктопные приложения </li>
+            <li><img src="./img/phone.jpg" alt="телефон" width="380">Мобильные приложения </li>
+            <li><img src="./img/monic.jpg" alt="монитор" width="380">Дизайнерские решения </li>
+        </ul>
+    </section>
   </body>
 </html>
