--- a/index.html
+++ b/index.html
@@ -45,5 +45,68 @@
             <li><img src="./img/monic.jpg" alt="монитор" width="380">Дизайнерские решения </li>
         </ul>
     </section>
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li>
+                <ul>
+                    <li><img src="/img/jon.jpg" alt="фото" width="278">
+                    <h3>Джон Смит</h3>
+                    <p>Product Designer</p></li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Faceboock</a></li>
+                    <li><a href="">Linkenid</a></li>
+                </ul>
+            </li>
+           <li>
+               <ul>
+                <li><img src="/img/marta.jpg" alt="фото" width="278">
+                    <h3>Марта Стеварт</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Faceboock</a></li>
+                <li><a href="">Linkenid</a></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li><img src="/img/robert.jpg" alt="фото" width="278">
+                        <h3>Роберт Джеклс</h3>
+                        <p>Marketing</p>
+                    </li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Faceboock</a></li>
+                    <li><a href="">Linkenid</a></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li><img src="/img/martin.jpg" alt="фото" width="278">
+                        <h3>Мартін Доу</h3>
+                        <p>UI Designer</p>
+                    </li>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Twitter</a></li>
+                    <li><a href="">Faceboock</a></li>
+                    <li><a href="">Linkenid</a></li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h3>Постоянные клиенты</h3>
+        <ul>
+            <li><img src="./img/logo 1.svg" alt=""></li>
+            <li><img src="./img/logo 2.svg" alt=""></li>
+            <li><img src="./img/logo 3.svg" alt=""></li>
+            <li><img src="./img/logo 4.svg" alt=""></li>
+            <li><img src="./img/logo 5.svg" alt=""></li>
+            <li><img src="./img/logo 6.svg" alt=""></li>
+        </ul>
+    </section>
   </body>
 </html>
