--- a/index.html
+++ b/index.html
@@ -108,5 +108,24 @@
             <li><img src="./img/logo 6.svg" alt=""></li>
         </ul>
     </section>
+    <footer>
+        <h3>Web Studio</h3>
+        <address>
+            г. Киев, пр-т Леси Украинки, 26 <br>
+            <a href="info@example.com"> info@example.com</a>
+            <a href="+38 099 111 11 11">+38 099 111 11 11</a>
+        </address>
+        <section>
+            <ul>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Faceboock</a></li>
+                <li><a href="">Linkenid</a></li>
+            </ul>
+        </section>
+        <section>
+            <h4>Подпишитесь на рассылку</h4>
+        </section>
+    </footer>
   </body>
 </html>
