--- a/index.html
+++ b/index.html
@@ -20,112 +20,147 @@
             <li><a href="+380961111111"> +38 096 111 11 11</a></li>
           </ul>
         </nav>
-    </header>
       </section>
-     <div>
-        <section>
-            <h2>эффективные решения для вашего бизнеса</h2>
-            <a href=""></a>
-        </section>
-     </div>
+    </header>
+    <div>
+      <section>
+        <h2>эффективные решения для вашего бизнеса</h2>
+        <a href=""></a>
+      </section>
+    </div>
     <section>
-        <h2>Мы гарантируем</h2>
-        <ul>
-            <li><img src="./img/antenna 1.svg" alt="антена"><span>Внимание к деталям</span> Идейные соображения, а также начало повседневной работы по формированию позиции.</li>
-            <li><img src="./img/clock 1.svg" alt="часы"><span>Пунктуальность</span> Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</li>
-            <li><img src="./img/Vector.svg" alt="компютер"> <span>Планирование</span> Равным образом консультация с широким активом в значительной степени обуславливает.</li>
-            <li><img src="./img/astronaut 1.svg" alt="космонавт"><span>Современные технологии</span> Значимость этих проблем настолько очевидна, что реализация плановых заданий.</li>
-        </ul>
+      <h2>Мы гарантируем</h2>
+      <ul>
+        <li>
+          <img src="./img/antenna1.svg" alt="антена" /><span
+            >Внимание к деталям</span
+          >
+          Идейные соображения, а также начало повседневной работы по
+          формированию позиции.
+        </li>
+        <li>
+          <img src="./img/clock1.svg" alt="часы" /><span>Пунктуальность</span>
+          Задача организации, в особенности же рамки и место обучения кадров
+          влечет за собой.
+        </li>
+        <li>
+          <img src="./img/Vector.svg" alt="компютер" />
+          <span>Планирование</span> Равным образом консультация с широким
+          активом в значительной степени обуславливает.
+        </li>
+        <li>
+          <img src="./img/astronaut1.svg" alt="космонавт" /><span
+            >Современные технологии</span
+          >
+          Значимость этих проблем настолько очевидна, что реализация плановых
+          заданий.
+        </li>
+      </ul>
     </section>
     <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-            <li><img src="./img/nout.jpg" alt="ноутбук" width="380">Десктопные приложения </li>
-            <li><img src="./img/phone.jpg" alt="телефон" width="380">Мобильные приложения </li>
-            <li><img src="./img/monic.jpg" alt="монитор" width="380">Дизайнерские решения </li>
-        </ul>
+      <h2>Чем мы занимаемся</h2>
+      <ul>
+        <li>
+          <img src="./img/nout.jpg" alt="ноутбук" width="380" />Десктопные
+          приложения
+        </li>
+        <li>
+          <img src="./img/phone.jpg" alt="телефон" width="380" />Мобильные
+          приложения
+        </li>
+        <li>
+          <img src="./img/monic.jpg" alt="монитор" width="380" />Дизайнерские
+          решения
+        </li>
+      </ul>
     </section>
     <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <ul>
             <li>
-                <ul>
-                    <li><img src="/img/jon.jpg" alt="фото" width="278">
-                    <h3>Джон Смит</h3>
-                    <p>Product Designer</p></li>
-                    <li><a href="">Instagram</a></li>
-                    <li><a href="">Twitter</a></li>
-                    <li><a href="">Faceboock</a></li>
-                    <li><a href="">Linkenid</a></li>
-                </ul>
+              <img src="/img/jon.jpg" alt="фото" width="278" />
+              <h3>Джон Смит</h3>
+              <p>Product Designer</p>
             </li>
-           <li>
-               <ul>
-                <li><img src="/img/marta.jpg" alt="фото" width="278">
-                    <h3>Марта Стеварт</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Faceboock</a></li>
-                <li><a href="">Linkenid</a></li>
-                </ul>
-            </li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Faceboock</a></li>
+            <li><a href="">Linkenid</a></li>
+          </ul>
+        </li>
+        <li>
+          <ul>
             <li>
-                <ul>
-                    <li><img src="/img/robert.jpg" alt="фото" width="278">
-                        <h3>Роберт Джеклс</h3>
-                        <p>Marketing</p>
-                    </li>
-                    <li><a href="">Instagram</a></li>
-                    <li><a href="">Twitter</a></li>
-                    <li><a href="">Faceboock</a></li>
-                    <li><a href="">Linkenid</a></li>
-                </ul>
+              <img src="/img/marta.jpg" alt="фото" width="278" />
+              <h3>Марта Стеварт</h3>
+              <p>Frontend Developer</p>
             </li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Faceboock</a></li>
+            <li><a href="">Linkenid</a></li>
+          </ul>
+        </li>
+        <li>
+          <ul>
             <li>
-                <ul>
-                    <li><img src="/img/martin.jpg" alt="фото" width="278">
-                        <h3>Мартін Доу</h3>
-                        <p>UI Designer</p>
-                    </li>
-                    <li><a href="">Instagram</a></li>
-                    <li><a href="">Twitter</a></li>
-                    <li><a href="">Faceboock</a></li>
-                    <li><a href="">Linkenid</a></li>
-                </ul>
+              <img src="/img/robert.jpg" alt="фото" width="278" />
+              <h3>Роберт Джеклс</h3>
+              <p>Marketing</p>
             </li>
-        </ul>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Faceboock</a></li>
+            <li><a href="">Linkenid</a></li>
+          </ul>
+        </li>
+        <li>
+          <ul>
+            <li>
+              <img src="/img/martin.jpg" alt="фото" width="278" />
+              <h3>Мартін Доу</h3>
+              <p>UI Designer</p>
+            </li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Faceboock</a></li>
+            <li><a href="">Linkenid</a></li>
+          </ul>
+        </li>
+      </ul>
     </section>
     <section>
-        <h3>Постоянные клиенты</h3>
-        <ul>
-            <li><img src="./img/logo 1.svg" alt=""></li>
-            <li><img src="./img/logo 2.svg" alt=""></li>
-            <li><img src="./img/logo 3.svg" alt=""></li>
-            <li><img src="./img/logo 4.svg" alt=""></li>
-            <li><img src="./img/logo 5.svg" alt=""></li>
-            <li><img src="./img/logo 6.svg" alt=""></li>
-        </ul>
+      <h3>Постоянные клиенты</h3>
+      <ul>
+        <li><img src="./img/logo1.svg" alt="" /></li>
+        <li><img src="./img/logo2.svg" alt="" /></li>
+        <li><img src="./img/logo3.svg" alt="" /></li>
+        <li><img src="./img/logo4.svg" alt="" /></li>
+        <li><img src="./img/logo5.svg" alt="" /></li>
+        <li><img src="./img/logo6.svg" alt="" /></li>
+      </ul>
     </section>
     <footer>
-        <h3>Web Studio</h3>
-        <address>
-            г. Киев, пр-т Леси Украинки, 26 <br>
-            <a href="info@example.com"> info@example.com</a>
-            <a href="+38 099 111 11 11">+38 099 111 11 11</a>
-        </address>
-        <section>
-            <ul>
-                <li><a href="">Instagram</a></li>
-                <li><a href="">Twitter</a></li>
-                <li><a href="">Faceboock</a></li>
-                <li><a href="">Linkenid</a></li>
-            </ul>
-        </section>
-        <section>
-            <h4>Подпишитесь на рассылку</h4>
-        </section>
+      <h3>Web Studio</h3>
+      <address>
+        г. Киев, пр-т Леси Украинки, 26 <br />
+        <a href="info@example.com"> info@example.com</a>
+        <a href="+380991111111">+38 099 111 11 11</a>
+      </address>
+      <section>
+        <h3>присоединяйтесь</h3>
+        <ul>
+          <li><a href="">Instagram</a></li>
+          <li><a href="">Twitter</a></li>
+          <li><a href="">Faceboock</a></li>
+          <li><a href="">Linkenid</a></li>
+        </ul>
+      </section>
+      <section>
+        <h4>Подпишитесь на рассылку</h4>
+      </section>
     </footer>
   </body>
 </html>
