--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <li><a href="">Instagram</a></li>
             <li><a href="">Twitter</a></li>
             <li><a href="">Faceboock</a></li>
-            <li><a href="">Linkenid</a></li>
+            <li><a href="">Ld</a></li>
           </ul>
         </li>
         <li>
@@ -100,7 +100,7 @@
             <li><a href="">Instagram</a></li>
             <li><a href="">Twitter</a></li>
             <li><a href="">Faceboock</a></li>
-            <li><a href="">Linkenid</a></li>
+            <li><a href="">Ld</a></li>
           </ul>
         </li>
         <li>
@@ -113,7 +113,7 @@
             <li><a href="">Instagram</a></li>
             <li><a href="">Twitter</a></li>
             <li><a href="">Faceboock</a></li>
-            <li><a href="">Linkenid</a></li>
+            <li><a href="">Ld</a></li>
           </ul>
         </li>
         <li>
@@ -126,7 +126,7 @@
             <li><a href="">Instagram</a></li>
             <li><a href="">Twitter</a></li>
             <li><a href="">Faceboock</a></li>
-            <li><a href="">Linkenid</a></li>
+            <li><a href="">Ld</a></li>
           </ul>
         </li>
       </ul>
