--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <li>
           <ul>
             <li>
-              <img src="/img/jon.jpg" alt="фото" width="278" />
+              <img src="./img/jon.jpg" alt="фото" width="278" />
               <h3>Джон Смит</h3>
               <p>Product Designer</p>
             </li>
@@ -93,7 +93,7 @@
         <li>
           <ul>
             <li>
-              <img src="/img/marta.jpg" alt="фото" width="278" />
+              <img src="./img/marta.jpg" alt="фото" width="278" />
               <h3>Марта Стеварт</h3>
               <p>Frontend Developer</p>
             </li>
@@ -106,7 +106,7 @@
         <li>
           <ul>
             <li>
-              <img src="/img/robert.jpg" alt="фото" width="278" />
+              <img src="./img/robert.jpg" alt="фото" width="278" />
               <h3>Роберт Джеклс</h3>
               <p>Marketing</p>
             </li>
@@ -119,7 +119,7 @@
         <li>
           <ul>
             <li>
-              <img src="/img/martin.jpg" alt="фото" width="278" />
+              <img src="./img/martin.jpg" alt="фото" width="278" />
               <h3>Мартін Доу</h3>
               <p>UI Designer</p>
             </li>
