--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
+    
   </head>
   <body>
     <header>
-      <section>
-        <h1>Web Studio</h1>
         <nav>
+          <a href="">Web Studio</a> 
           <ul>
             <li><a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
@@ -20,63 +21,38 @@
             <li><a href="+380961111111"> +38 096 111 11 11</a></li>
           </ul>
         </nav>
-      </section>
-    </header>
-    <div>
+          </header>
       <section>
         <h2>эффективные решения для вашего бизнеса</h2>
         <a href=""></a>
       </section>
-    </div>
     <section>
       <h2>Мы гарантируем</h2>
-      <ul>
-        <li>
-          <img src="./img/antenna1.svg" alt="антена" /><span
-            >Внимание к деталям</span
-          >
-          Идейные соображения, а также начало повседневной работы по
-          формированию позиции.
-        </li>
-        <li>
-          <img src="./img/clock1.svg" alt="часы" /><span>Пунктуальность</span>
-          Задача организации, в особенности же рамки и место обучения кадров
-          влечет за собой.
-        </li>
-        <li>
+          <img src="./img/antenna1.svg" alt="антена" />
+          <h2>Внимание к деталям. </h2>
+          <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>        
+          <img src="./img/clock1.svg" alt="часы" />
+          <h2>Пунктуальность</h2>
+          <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           <img src="./img/Vector.svg" alt="компютер" />
-          <span>Планирование</span> Равным образом консультация с широким
-          активом в значительной степени обуславливает.
-        </li>
-        <li>
-          <img src="./img/astronaut1.svg" alt="космонавт" /><span
-            >Современные технологии</span
-          >
-          Значимость этих проблем настолько очевидна, что реализация плановых
-          заданий.
-        </li>
-      </ul>
+          <h2>Планирование</h2>
+          <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+          <img src="./img/astronaut1.svg" alt="космонавт" />
+          <h2>Современные технологии</h2>
+          <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
     </section>
     <section>
       <h2>Чем мы занимаемся</h2>
-      <ul>
-        <li>
-          <img src="./img/nout.jpg" alt="ноутбук" width="380" />Десктопные
-          приложения
-        </li>
-        <li>
-          <img src="./img/phone.jpg" alt="телефон" width="380" />Мобильные
-          приложения
-        </li>
-        <li>
-          <img src="./img/monic.jpg" alt="монитор" width="380" />Дизайнерские
-          решения
-        </li>
-      </ul>
+          <img src="./img/nout.jpg" alt="ноутбук" width="380" />
+          <h2>Десктопные приложения</h2>
+          <img src="./img/phone.jpg" alt="телефон" width="380" />
+          <h2>Мобильные приложения</h2>
+          <img src="./img/monic.jpg" alt="монитор" width="380" />
+          <h2>Дизайнерские решения</h2>
     </section>
     <section>
       <h2>Наша команда</h2>
-      <ul>
+      <ul class="social-links">
         <li>
           <ul>
             <li>
@@ -143,13 +119,12 @@
       </ul>
     </section>
     <footer>
-      <h3>Web Studio</h3>
+      <a href="">Web Studio</a> 
       <address>
         г. Киев, пр-т Леси Украинки, 26 <br />
         <a href="info@example.com"> info@example.com</a>
         <a href="+380991111111">+38 099 111 11 11</a>
       </address>
-      <section>
         <h3>присоединяйтесь</h3>
         <ul>
           <li><a href="">Instagram</a></li>
@@ -157,10 +132,7 @@
           <li><a href="">Faceboock</a></li>
           <li><a href="">Linkenid</a></li>
         </ul>
-      </section>
-      <section>
         <h4>Подпишитесь на рассылку</h4>
-      </section>
     </footer>
   </body>
 </html>
